--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,6 +40,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'French drama -- 17th century'
 - !lcc 'PQ'
+- GITenberg
 tableOfContents: "Notice sur J.-B. Poquelin Molière\r\n\t\r\nPREMIÈRE ÉPOQUE (1645-1658).\r\
   \n-- Le Médecin volant, comédie \t\r\n-- La Jalousie du Barbouillé, comédie \t\r\
   \n-- L'Étourdi, comédie \t\r\n-- Le Dépit amoureux, comédie\r\n\t\r\nDEUXIÈME ÉPOQUE\
